# MusicPlayer

./: README.md
MusicPlayer/: CMakeLists.txt  TODO.txt  log.txt  makefile  musplay  play
MusicPlayer/GuiMusicPlayer/: TODO.txt  app.c  makefile  play
MusicPlayer/GuiMusicPlayer/src/: audio_file_play.c  gui_functions.c  playback.c  player_state.c  song_queue.c
MusicPlayer/GuiMusicPlayer/src/gui/: builder.ui  builder.ui~
MusicPlayer/GuiMusicPlayer/src/headers/: musicplayer.h
MusicPlayer/GuiMusicPlayer/src/players/: mp3_player.c  wav_player.c
MusicPlayer/TerminalMusicPlayer/src/: file_parse.c  main.c  playback.c  player_state.c  song_queue.c
MusicPlayer/TerminalMusicPlayer/src/headers/: musicplayer.h
MusicPlayer/src/: AudioFileFuncs.cpp  GuiFunctions.cpp  Main.cpp  Metadata.cpp  Players.cpp  SongQueue.cpp  audio_file_funcs.cpp  controller.cpp  main.c  main.cpp  metadata.cpp  mp3_player.c  music_ds.c  players.cpp  song_playback.c  song_queue.cpp  view.cpp  wav_player.c
MusicPlayer/src/gui/: builder.ui  builder.ui~  style.css
MusicPlayer/src/headers/: Audio.h  GuiFunctions.h  SongQueue.h  audio.hpp  controller.hpp  events.hpp  musicplayer.h  song_queue.hpp  view.hpp
MusicPlayer/src/tests/: CMakeLists.txt  SongQueue_Test.cpp  a.out  makefile  songQueueTest.cpp  test_audio_file_funcs.cpp  test_metadata.cpp  test_song_queue.cpp
zumaMP/GuiMusicPlayer/: app.c  log.txt  play
zumaMP/GuiMusicPlayer/src/: file_parse.c  gui_functions.c  playback.c  player_state.c  song_queue.c
zumaMP/GuiMusicPlayer/src/gui/: builder.ui
zumaMP/GuiMusicPlayer/src/headers/: musicplayer.h
zumaMP/GuiMusicPlayer/src/players/: mp3_player.c  (+1 more)
zumaMP/TerminalMusicPlayer/: about.txt  makefile  play
zumaMP/TerminalMusicPlayer/src/: threads.c
(+1 files in other folders)
